--- a/src/app.scss
+++ b/src/app.scss
@@ -17,7 +17,52 @@ body {
     flex-direction: column;
     height: 100%;
   }
-
-
+  h1{
+    text-align: center;
+  }
+  #history{
+    border: 7px solid black;
+    background-color: white;
+  height: 400px;
+  overflow: scroll;
+}
+// div.ex1 {
+//   background-color: lightblue;
+//   width: 110px;
+//   height: 110px;
+//   overflow: scroll;
+// }
+  #json-pretty{
+    background: #666;
+    line-height: 1.3;
+    color:#66d9ef;
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
+  }
+              
+    .__json-key__
+      {color: #F92672;}
+  
+    .__json-value__
+      {color: #A6E22E;}
+  
+    .__json-string__
+      {color: #FD971F;}
+  
+    .__json-boolean__
+      {color: #AC81Fe;}
+  
+      .__json-pretty-error__
+    {line-height: 1.3;
+    color: #66d9ef;
+    background: #272822;
+    overflow:auto;
+    }
+  
+  .test-3
+    {font-size: 1.5em;}
 
 }
